tests/typing/faulty_union_ops.sy
start :: fn do
    a : int? = 1
    a + 1
end

// error: $BinOp { .. }
